--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,12 +5,14 @@ Version: 0.1.0
 Author: Si Wen
 Maintainer: Si Wem <si.wen@fda.hhs.gov>
 Description: This package contains the data and function for conducting the simulation study 
-  in the manuscript "Three-way Mixed Effect ANOVA to Estimate MRMC Limits of Agreement".
+  in the manuscript 
+  Wen, S.& Gallas, B. D. (2021). Three_way Mixed Effect ANOVA to Estimate MRMC 
+  Limits of Agreement. arXiv preprint	arXiv:2107.08891. Submitted to Statistics 
+  in Biopharmaceutical Research.
 License: CC0
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Depends: 
-  R (>= 3.5.0),
-  iMRMC
-Imports: stats
+  R (>= 3.5.0)
+Imports: stats,iMRMC
